Fix spacing and sizing of grid

--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -4,7 +4,7 @@
 @import 'mixins'
 
 body
-  background: linear-gradient(45deg, #8BB4C4, white)
+  background: linear-gradient(45deg, #8BB4C4, white) fixed
   height: 100vh
 
 .heading
@@ -17,32 +17,36 @@ body
 
 .blog_grid
   display: grid
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 25rem))
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr))
   grid-auto-rows: 20rem
-  grid-gap: 4rem
+  grid-gap: 1rem
   margin: 0 auto
   width: 70%
   padding: 1.5rem 0
 
   .blog
     background: radial-gradient(at top left, white, #e0e0e0 100%)
-    box-shadow: 1px 2px 3px #666
     border: 1px solid #707070
     border-radius: 4px
-    padding: 1rem
+    padding: 1.5rem
+
+    &:hover
+      box-shadow: 0 2px 3px #666
+      transition: all 0.1s ease-in-out
 
     .timestamp
       font-family: Roboto, sans-serif
       text-align: right
       color: gray
+      font-size: 0.8rem
 
     .title
-      padding: 1rem
+      padding: 1rem 0
       font-family: "Merriweather", serif
-      font-size: 2.2rem
+      font-size: 1.5rem
 
     .subtext
-      padding: 1rem
+      padding: 1rem 0
       font-family: "Source Serif Pro", serif
       color: #696969
 
